Fix Panama FFI implementation for Java 25 compatibility
Major fixes to make Panama Foreign Function & Memory API work correctly:

1. **Fixed SymbolLookup for libc**:
   - Changed from loaderLookup() to explicit libraryLookup()
   - Try multiple libc paths (/lib/x86_64-linux-gnu/libc.so.6, libc.so.6, c)
   - Ensures syscall and other libc functions can be found

2. **Fixed FunctionDescriptor creation**:
   - Created make-function-descriptor helper to handle varargs properly
   - Use into-array for parameter layouts to avoid reflection issues
   - Proper handling of functions with zero parameters

3. **Fixed downcallHandle calls**:
   - Added proper type hints (^MemorySegment, ^FunctionDescriptor, ^Linker)
   - Pass empty Linker$Option array as required by Java 25 API
   - Ensures Clojure can resolve correct method overload

4. **Fixed MethodHandle invocations**:
   - Changed from .invoke/.invokeExact to .invokeWithArguments
   - Polymorphic signature methods cannot be called through Clojure reflection
   - invokeWithArguments is a regular method that accepts List/array

5. **Fixed nullable record fields**:
   - Changed optional primitive fields from ^int to ^Integer, ^long to ^Long
   - Prevents NullPointerException when constructing records with nil values
   - Applies to MapCreateAttr, ProgLoadAttr, ObjPinAttr

6. **Added missing test-runner dependency**:
   - Added io.github.cognitect-labs/test-runner to deps.edn
   - Required for running tests with cognitect.test-runner

Testing: BPF syscalls now work correctly - map creation/deletion confirmed.
Remaining: Minor serialization issues in test code (separate from FFI).

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>